--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,19 +16,23 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Navigateside"
         tools:targetApi="31">
+
         <activity
             android:name=".ui.cardsinfo.popUpAddUser"
             android:exported="false"
-            android:theme="@style/Theme.Navigateside.costume"/>
-        <activity android:name=".ui.home.Transaction"
-            android:exported="false"
-            android:theme="@style/Theme.Navigateside.costume"/>
+            android:theme="@style/Theme.Navigateside.costume" />
         <activity
-            android:name=".arfolyam"
-            android:exported="false" />
+            android:name=".ui.home.Transaction"
+            android:exported="false"
+            android:theme="@style/Theme.Navigateside.costume" />
+        <activity
+            android:name=".ui.arfolyam.arfolyam"
+            android:exported="false"
+            tools:ignore="Instantiatable" />
         <activity
             android:name=".regist"
-            android:exported="true" />
+            android:exported="true"
+            android:theme="@style/Theme.Navigateside.NoActionBar"/>
         <activity
             android:name=".ui.login.LoginActivity"
             android:exported="true"
@@ -40,6 +44,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
